--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -15,5 +15,4 @@ jobs:
     steps: 
       - uses:  actions/checkout@v2
       - run:  npm install
-      - run: npm build
-       
+      - run: npm run build
